# MCR

./: .gitignore  Cargo.toml
cli/: Cargo.toml
cli/src/: main.rs
rcon/src/: client.rs  codec.rs  error.rs  lib.rs  message.rs
