[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "^10.0"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.config]
version = "^0.13"
features = ["toml"]

[dependencies.rcon]
path = "../rcon"
